# math

./: CMakeLists.txt
include/distribution/: gaussian.hpp
include/geometry/calculation/: base.hpp  polygon.hpp  polyline.hpp
include/geometry/dump/: to_txt.hpp
include/geometry/elements/: line2d.hpp  point2d.hpp  point2i.hpp  rotation2d.hpp  segment2d.hpp  vector2d.hpp
include/geometry/util/: config.hpp
include/model/fake_map/: data_model_nl.hpp  grid.hpp  grid_data.hpp  grid_data_provider.hpp  grid_manager.hpp  types.hpp
include/util/: constants.hpp  conversion.hpp  utility.hpp
src/distribution/: CMakeLists.txt
src/geometry/: CMakeLists.txt
src/geometry/calculation/: base.cpp
src/geometry/dump/: to_txt.cpp
src/model/: CMakeLists.txt
src/util/: CMakeLists.txt  conversion.cpp  utility.cpp
test/: CMakeLists.txt  run_all_unit_tests.py
test/geometry/calculation/: test_base.cpp
test/geometry/elements/: test_line2d.cpp  test_point2d.cpp  test_rotation2d.cpp  test_segment2d.cpp  test_vector2d.cpp
test/util/: test_utility.cpp
todo/: TODO  TODO-fake_map
